# prompt_mcc_tester

./: .gitignore  README.md  base_prompt.yaml  optimizing_mcc_classification.md  pyproject.toml  requirements.txt  run_comparison_test.py  run_custom_mcc_evaluation.py  run_mcc_evaluation.py  run_waki_comparison.py  setup.cfg  setup.py  test_matheus_agent.py  test_waki_agent.py
data/: custom_test_merchants.csv  sample_merchants.csv
mcc_classifier/: evaluator.py  main.py
mcc_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
output/: custom_test_merchants_comparison_20250402_135659.csv  custom_test_merchants_comparison_20250402_152012.csv  custom_test_merchants_comparison_20250402_152954.csv  custom_test_merchants_comparison_20250402_155234.csv  custom_test_merchants_comparison_20250402_161052.csv  custom_test_merchants_comparison_20250402_163508.csv  custom_test_merchants_comparison_20250402_164447.csv  custom_test_merchants_comparison_20250402_164942.csv  custom_test_merchants_comparison_20250402_165527.csv  custom_test_merchants_comparison_20250402_165934.csv  custom_test_merchants_comparison_20250402_170332.csv  custom_test_merchants_comparison_20250402_171833.csv  custom_test_merchants_comparison_20250402_183230.csv  custom_test_merchants_comparison_20250402_234451.csv  custom_test_merchants_comparison_20250403_101504.csv  matheus_agent_test_20250402_122553.csv  sample_merchants_comparison_20250402_151826.csv  sample_merchants_comparison_20250402_152919.csv  sample_merchants_comparison_20250402_154923.csv  sample_results_with_api.csv  (+1 more)
(+12 files in other folders)
