[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcc_classifier"
version = "0.1.0"
description = "Tool to evaluate MCC classification agents"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "InfinitePay Team"}
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
]

[project.scripts]
mcc-evaluate = "mcc_classifier.main:main" 